--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
         	<h2 class="title" id="galery">Trabajos recientes</h2>
         	
         	<div class="galeria-cnt">
-        		<div class="gal-itm" onclick="newtab('../img/1.jpg')"><img src="img/1.jpg" alt="" class="gal-foto"></div>
-        		<div class="gal-itm" onclick="newtab('../img/gal2.jpg')"><img src="img/gal2.jpg" alt="" class="gal-foto"></div>
-        		<div class="gal-itm" onclick="newtab('../img/gal3.jpg')"><img src="img/gal3.jpg" alt="" class="gal-foto"></div>
-        		<div class="gal-itm" onclick="newtab('../img/gal4.jpg')"><img src="img/gal4.jpg" alt="" class="gal-foto"></div>
-        		<div class="gal-itm" onclick="newtab('../img/gal5.jpg')"><img src="img/gal5.jpg" alt="" class="gal-foto"></div>
-        		<div class="gal-itm" onclick="newtab('../img/gal6.jpg')"><img src="img/gal6.jpg" alt="" class="gal-foto"></div>
-        		<div class="gal-itm" onclick="newtab('../img/gal7.jpg')"><img src="img/gal7.jpg" alt="" class="gal-foto"></div>
-        		<div class="gal-itm" onclick="newtab('../img/gal8.jpg')"><img src="img/gal8.jpg" alt="" class="gal-foto"></div>
+        		<div class="gal-itm" onclick="newtab('../Mariann_CA/img/1.jpg')"><img src="img/1.jpg" alt="" class="gal-foto"></div>
+        		<div class="gal-itm" onclick="newtab('../Mariann_CA/img/gal2.jpg')"><img src="img/gal2.jpg" alt="" class="gal-foto"></div>
+        		<div class="gal-itm" onclick="newtab('../Mariann_CA/img/gal3.jpg')"><img src="img/gal3.jpg" alt="" class="gal-foto"></div>
+        		<div class="gal-itm" onclick="newtab('../Mariann_CA/img/gal4.jpg')"><img src="img/gal4.jpg" alt="" class="gal-foto"></div>
+        		<div class="gal-itm" onclick="newtab('../Mariann_CA/img/gal5.jpg')"><img src="img/gal5.jpg" alt="" class="gal-foto"></div>
+        		<div class="gal-itm" onclick="newtab('../Mariann_CA/img/gal6.jpg')"><img src="img/gal6.jpg" alt="" class="gal-foto"></div>
+        		<div class="gal-itm" onclick="newtab('../Mariann_CA/img/gal7.jpg')"><img src="img/gal7.jpg" alt="" class="gal-foto"></div>
+        		<div class="gal-itm" onclick="newtab('../Mariann_CA/img/gal8.jpg')"><img src="img/gal8.jpg" alt="" class="gal-foto"></div>
         	</div>
         	
         	<a href="#" id="btn-gal" class="boton">¡Ver mas!</a>
